# ask-shell

./: .env.example  .gitignore  404.html  CHANGELOG.md  README.md  README_zh.md  index.html  main.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml
alpha_bot/: __init__.py
api/agent/: index.html
api/executor/: index.html
api/llm/: index.html
api/ui/: index.html
ask_shell/: __init__.py  agent.py  cli.py
ask_shell/auto_hint/: analyzer.py  generator.py  persistence.py  system.py
ask_shell/executor/: __init__.py  shell.py
ask_shell/llm/: __init__.py  base.py  mock.py  openai_client.py
ask_shell/memory/: compressor.py
ask_shell/models/: __init__.py  types.py
ask_shell/skills/: __init__.py  base_skill.py  browser_skill.py  command_skill.py  direct_llm_skill.py  feishu_skill.py  image_skill.py  llm_skill.py  ppt_skill.py  skill_generator.py  skill_manager.py  skill_persistence.py  skill_selector.py  utils.py  wechat_skill.py
ask_shell/skills/custom_skills/: mac_say.md
ask_shell/ui/: __init__.py  console.py
ask_shell/web/: __init__.py  server.py  task_history.json
ask_shell/web/static/css/: styles.css
ask_shell/web/static/js/: app.js
ask_shell/web/templates/: index.html  index_refactored.html
ask_shell/web/templates/components/: header.html  history-sidebar.html  input-section.html  output-section.html  task-modal.html
development/architecture/: index.html
development/contributing/: index.html
development/roadmap/: index.html
docs/: architecture-overview.mmd  index.md
docs/api/: agent.md  memory.md  skills.md
docs/development/: architecture.md  contributing.md  roadmap.md
docs/getting-started/: installation.md
docs/user-guide/: advanced-features.md  browser-skill-changes.md  examples.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
search/: search_index.json
user-guide/advanced-features/: index.html
user-guide/basic-usage/: index.html
user-guide/examples/: index.html
user-guide/safety/: index.html
