[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabot-ai"
version = "0.4.0"
description = "用自然语言操控你的终端 - 让 AI 帮你生成并执行 Shell 命令"
authors = [
    {name = "fssqawj", email = "fssqawj@163.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["shell", "ai", "cli", "terminal", "natural-language"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "loguru>=0.7.2",
    "python-pptx>=0.6.23",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/fssqawj/alpha-bot"
Repository = "https://github.com/fssqawj/alpha-bot"
Issues = "https://github.com/fssqawj/alpha-bot/issues"

[project.scripts]
alpha-bot = "alpha_bot.cli:main"
ask = "alpha_bot.cli:main"

[tool.setuptools]
packages = ["alpha_bot", "alpha_bot.executor", "alpha_bot.llm", "alpha_bot.models", "alpha_bot.ui", "alpha_bot.skills", "alpha_bot.web"]
